--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,8 +2,13 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}PFA Gestion Resto!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+
+        <link rel="stylesheet" href="https://cdn.tailgrids.com/tailgrids-fallback.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"/>
+
+
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
@@ -12,8 +17,30 @@
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
+
+        <script src="https://cdn.tailwindcss.com"></script>
+
+        <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+        <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
     </head>
-    <body>
-        {% block body %}{% endblock %}
+    <body class="bg-gray-100">
+
+        <div class="">
+            <!-- Flash Message-->
+            {{ include('./base/flashs.html.twig') }}
+        </div>
+
+        <div class="h-screen flex flex-row flex-wrap"   >
+            {% block body %}{% endblock %}
+        </div>
+
+        <script>
+            const buttonSuccess = document.getElementById("alert-success-button");
+            if(buttonSuccess !== null) {
+                buttonSuccess.addEventListener("click", (e) => {
+                    document.getElementById("alert-success").remove();
+                });
+            }
+        </script>
     </body>
 </html>
