--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,40 +3,53 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
+<!-- This is an example component -->
+<div class="bg-gray-100 flex w-full">
+	<div class="flex-col flex ml-auto mr-auto items-center w-full lg:w-2/3 md:w-3/5">
+		<h1 class="font-bold text-2xl my-10 text-dark-700">
+			Connexion
+		</h1>
+		<form method="post" class="mt-2 flex flex-col lg:w-1/2 w-8/12">
+            {% if error %}
+                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+            {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+            {% if app.user %}
+                <div class="mb-3">
+                    You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+                </div>
+            {% endif %}
+			<div class="flex flex-wrap items-stretch w-full mb-4 relative h-15 bg-white items-center rounded mb-6 pr-10">
+				<div class="flex -mr-px justify-center w-15 p-4">
+					<span class="flex items-center leading-normal bg-white px-3 border-0 rounded rounded-r-none text-2xl text-gray-600">
+						<i class="fas fa-user-circle"></i>
+					</span>
+				</div>
+				<input type="email" name="email" value="{{ last_username }}"  autocomplete="email" autofocus required class="flex-shrink flex-grow flex-auto leading-normal w-px flex-1 border-0 h-10 border-grey-light rounded rounded-l-none px-3 self-center relative  font-roboto text-xl outline-none" placeholder="Username"/>
+			</div>
+			<div class="flex flex-wrap items-stretch w-full relative h-15 bg-white items-center rounded mb-4 pr-10">
+				<div class="flex -mr-px justify-center w-15 p-4">
+					<span class="flex items-center leading-normal bg-white rounded rounded-r-none text-xl px-3 whitespace-no-wrap text-gray-600">
+						<i class="fas fa-lock"></i>
+					</span>
+				</div>
+				<input type="password" name="password" autocomplete="current-password" required class="flex-shrink flex-grow flex-auto leading-normal w-px flex-1 border-0 h-10 px-3 relative self-center font-roboto text-xl outline-none" placeholder="Password"/>
+				{# <div class="flex -mr-px">
+					<span class="flex items-center leading-normal bg-white rounded rounded-l-none border-0 px-3 whitespace-no-wrap text-gray-600">
+						<i class="fas fa-eye-slash"></i>
+					</span>
+				</div> #}
+			</div>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
+			<a href="{{ path('app_forgot_password_request') }}" class="text-base text-dark-700 text-right font-roboto leading-normal hover:underline mb-6">Mot de passe oublié ?</a>
 
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
-</form>
+            <button class="bg-blue-400 py-4 text-center px-17 md:px-12 md:py-4 text-white rounded leading-tight text-xl md:text-base font-sans mt-4 mb-20">
+				Se connecter
+			</button>
+		</form>
+	</div>
+</div>
 {% endblock %}
