--- a/backend/templates/menu/index.html.twig
+++ b/backend/templates/menu/index.html.twig
@@ -175,7 +175,7 @@
              "
           >
             <div class="w-6 h-6 cursor-pointer">
-              <a href="{{ path("app_menu_remove", {id: menu.id}) }}">
+              <a class="remove" data-label="ce menu ?" data-path="{{ path("app_menu_remove", {id: menu.id}) }}">
                 {{ heroicon('trash', 'text-danger', 'outline') }}
               </a>
             </div>
