--- a/backend/templates/ingredient/index.html.twig
+++ b/backend/templates/ingredient/index.html.twig
@@ -171,7 +171,7 @@
              "
           >
             <div class="w-6 h-6 cursor-pointer">
-              <a href="{{ path("app_ingredient_remove", {id: ingredient.id}) }}">
+              <a class="remove" data-label="cette ingrédient ?" data-path="{{ path("app_ingredient_remove", {id: ingredient.id}) }}">
                 {{ heroicon('trash', 'text-danger', 'outline') }}
               </a>
             </div>
